--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -38,6 +38,7 @@
     border: none;
     outline: none;
     background: transparent;
+    display: none;
 }
 
 .slick-prev:hover,
@@ -73,7 +74,8 @@
 }
 
 .slick-prev {
-    left: -25px;
+    left: -200px;
+    z-index: 999;
 }
 
 [dir="rtl"] .slick-prev {
